# MySecurity

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  MySecurity.xmind  README.md  go.mod  install.bat  install.sh  main  main.c  main.go  mySecurity.postman_collection.json  package-lock.json  package.json  requirements.txt  server.c  server.h  settings.yaml  setup.py  windows-installer.bat
.github/workflows/: codeql.yml  myPipeline.yml
API/server/: server.go
App/: requirements.txt
App/mySecurity/: globals.py  middleware.py  mySecurity.py  request.py  server.py
Auth/: README.md  requirements.txt
Auth/mySecurity/: __init__.py  mySecurity.py  request.py  server.py  timer.py
Auth/temp/: remote_control.pyw
React/my-security/: package-lock.json  package.json
React/my-security-app/: package.json
api/: go.mod  go.sum  main.go  server.go
api/handler/: api.go  app.go
app/: .gitignore  Makefile  app.c  app.h  client.py  globals.py  interface.py  main.c  mySecurity.pyw  request.py  requirements.txt  server.py
app/data/: api.c  api.h
app/handler/: api.c  api.h
app/libs/: socket.c  socket.h
app/mysecurity/: README.md  index.html  main.js  package-lock.json  package.json
app/python/: .gitignore  (+1 more)
client/: Makefile  main.c  package-lock.json
frontend/: package-lock.json  package.json
handler/: CMakeLists.txt  handler.c  handler.h
libs/: CMakeLists.txt
mySecurity/: interface.py  mySecurity.py  server.py  timer.py
server/: Makefile  go.mod  go.sum  main.c  main.go
src/: display  handler.h  main.c  socket.c
temp/: mySecurity.pyw
(+67 files in other folders)
